# PythonGraphics

./: .gitignore  a.py  a.pyanim  a.pybm  graphics.py
src/: .gitignore  LICENSE  pyproject.toml
src/python_graphics_kowaga/graphics/: conversion.py  file.py  graphics.py
src/python_graphics_kowaga/utils/: shapes.py
